# crypto-pipeline

./: .env.example  .gitignore  README.md  alembic.ini  consumer.py  docker-compose.yml  producer.py  pyproject.toml  smart_consumer.py
.claude/: settings.local.json
alembic/: env.py
alembic/versions/: 82071463c28c_create_price_tables.py
src/crypto_pipeline/: config.py  consumer.py  logging_config.py  metrics.py  producer.py  smart_consumer.py
src/crypto_pipeline/api/: app.py
src/crypto_pipeline/db/: connection.py  queries.py
src/crypto_pipeline/schemas/: price.py
tests/: conftest.py  test_api.py  test_db_queries.py  test_spike_detector.py
