[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "crypto-pipeline"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "kafka-python>=2.0",
    "psycopg2-binary>=2.9",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "requests>=2.31",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
crypto-producer = "crypto_pipeline.producer:main"
crypto-consumer = "crypto_pipeline.smart_consumer:main"
