[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "crypto-pipeline"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "kafka-python>=2.0",
    "psycopg2-binary>=2.9",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "requests>=2.31",
    "structlog>=24.0",
    "prometheus-client>=0.20",
    "tenacity>=8.0",
    "alembic>=1.13",
    "sqlalchemy>=2.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
crypto-producer = "crypto_pipeline.producer:main"
crypto-consumer = "crypto_pipeline.smart_consumer:main"
